WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127729
REGRESSION (
r159609
): Images are corrupted when hovering over buttons @ github.com
https://bugs.webkit.org/show_bug.cgi?id=127729
Summary
REGRESSION (r159609): Images are corrupted when hovering over buttons @ githu...
Geoffrey Garen
Reported
2014-01-27 16:43:53 PST
Steps to reproduce: 1. Go to github.com 2. Log in (accounts are free) 3. Move the mouse right and left over the yellow buttons with the octopus cats on them. --> Notice flashing of background color and failure to repaint whole button/image. Bisected: Works: opensource
r159608
Fails: opensource
r159609
http://trac.webkit.org/log/trunk/?rev=159609&stop_rev=159609
Attachments
Patch
(5.25 KB, patch)
2014-02-04 06:16 PST
,
Radu Stavila
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-01-27 16:44:42 PST
<
rdar://problem/15920727
>
Radu Stavila
Comment 2
2014-01-28 04:52:44 PST
Investigating
Radu Stavila
Comment 3
2014-01-30 10:14:05 PST
Found & fixed issue, will upload patch tomorrow.
Radu Stavila
Comment 4
2014-02-03 04:55:58 PST
Altough I already have a patch that fixes this issue (by basically rolling back the changes that affected this particular case when regions are not involved), I will investigate a little bit further the actual cause of this because it could be a GraphicsContext issue.
Radu Stavila
Comment 5
2014-02-04 06:16:10 PST
Created
attachment 223106
[details]
Patch
WebKit Commit Bot
Comment 6
2014-02-04 09:23:04 PST
Comment on
attachment 223106
[details]
Patch Clearing flags on attachment: 223106 Committed
r163382
: <
http://trac.webkit.org/changeset/163382
>
WebKit Commit Bot
Comment 7
2014-02-04 09:23:07 PST
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 8
2014-07-29 11:11:36 PDT
This caused
bug 135318
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug